<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se315.journal.SubjectListActivity">

    <Button
        android:id="@+id/sbjlist_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/sbjlist_btn_back"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="switchToMain"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/sbjlist_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/sbjlist_btn_add"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="switchToAddSubject"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/sbjlist_tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        android:text="@string/sbjlist_tv_type"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sbjlist_tv_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        android:text="@string/sbjlist_tv_mark"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/sbjlist_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        android:text="@string/sbjlist_tv_name"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/sbjlist_tv_type"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/sbjlist_tv_mark"
        android:layout_marginRight="8dp" />

    <ExpandableListView
        android:id="@+id/sbjlist_explv"
        android:layout_width="0dp"
        android:layout_height="349dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sbjlist_btn_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbjlist_tv_mark" />

    <Button
        android:id="@+id/sbjlist_btn_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/sbjlist_btn_schedule"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/sbjlist_btn_back"
        app:layout_constraintRight_toLeftOf="@+id/sbjlist_btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:onClick="switchToSchedule"/>
</android.support.constraint.ConstraintLayout>
